# regexle-haskell

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile.codex-cloud  LICENSE  Makefile  README.md  cabal.project  codex-cloud.env  flake.nix  regexle-haskell.cabal
.beads/: issues.jsonl
.github/workflows/: ci.yml
app/: Main.hs  ReplayDump.hs
benchmarks/profiles/: side3-days400-401-pyclone-transition-comparison.json  side3-days400-449-pyclone-postgoal.json  side3-days400-449-pyclone-pregoal.json  side3-days400-449-pyclone.json  side3-days400-449-python-enum-func.json
benchmarks/smt/side3-400-409/: base.smt2  driver.smt2  puzzle-0400.smt2  puzzle-0401.smt2  puzzle-0402.smt2  puzzle-0403.smt2  puzzle-0404.smt2  puzzle-0405.smt2  puzzle-0406.smt2  puzzle-0407.smt2  puzzle-0408.smt2  puzzle-0409.smt2
docs/: benchmark-notes-20251103.md  benchmark-notes-20251106-regex36-nogoal.md  codex-cloud-environment.md  direct-z3-plan.md  hot-solver-sbv-notes.md  model-cache-eval-20251031.md  sbv-solver-outline.md  solvercheck-auto-eval-20251031.md  stats-gap-report.md  stats-workflow.md  z3-hot-crash.md
scripts/: capture_and_shrink.sh  capture_segfault_dump.sh  codex-cloud-fastmirror.sh  codex-cloud-maintenance.sh  codex-cloud-setup.sh  compare_profiles.py  double_shrink.sh  dump_dead_alphabet.hs  dump_state_counts.hs  print_z3_version.hs  render_stats_table.py  require-clean-git.sh  run_replay_test.sh  test-codex-cloud-env.sh  test_dump_dir.py  test_hot_params.py  test_tar_dump.py
src/Regexle/: DFA.hs  DfaCache.hs  PuzzleCache.hs  RegexParser.hs  Solver.hs
test/: DFASpec.hs  PuzzleCacheSpec.hs  PyCloneSpec.hs
z3-408.2/src/Z3/: Base.hs  Monad.hs
z3-408.2/src/Z3/Base/: C.hsc
z3-415.3/src/Z3/: Base.hs  Monad.hs
z3-415.3/src/Z3/Base/: C.hsc
