cabal-version:   3.16
name:            regexle-haskell
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          Mark Wotton
maintainer:      mwotton@gmail.com
build-type:      Simple
extra-doc-files: README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Regexle.PuzzleCache
        Regexle.DFA
        Regexle.RegexParser
        Regexle.DfaCache
        Regexle.Solver
    hs-source-dirs:   src
    build-depends:
        aeson >=2.2 && <2.3,
        base >=4.19 && <5,
        bytestring >=0.11 && <0.13,
        containers >=0.7 && <0.8,
        hashable >=1.5 && <1.6,
        megaparsec >=9 && <10,
        step-function >=0.2 && <0.3,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.5,
        http-client >=0.7 && <0.8,
        http-client-tls >=0.3 && <0.4,
        http-types >=0.12 && <0.13,
        kleene >=0.1 && <0.2,
        time >=1.14 && <1.15,
        text >=2.0 && <2.3,
        vector >=0.13 && <0.14,
        z3 >=415 && <416
    default-language: Haskell2010

test-suite spec
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-tool-depends:
        sydtest-discover:sydtest-discover
    other-modules:
        DFASpec
        PuzzleCacheSpec
        PyCloneSpec
    build-depends:
        aeson >=2.2 && <2.3,
        base >=4.19 && <5,
        bytestring >=0.11 && <0.13,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.5,
        http-client >=0.7 && <0.8,
        http-client-tls >=0.3 && <0.4,
        http-types >=0.12 && <0.13,
        kleene >=0.1 && <0.2,
        regexle-haskell,
        z3 >=415 && <416,
        containers >=0.7 && <0.8,
        sydtest >=0.22 && <0.23,
        sydtest-aeson >=0.2 && <0.3,
        sydtest-discover >=0.0.0.4 && <0.1,
        temporary >=1.3 && <1.4,
        text >=2.0 && <2.3,
        vector >=0.13 && <0.14
    ghc-options:
        -threaded
        -rtsopts
        "-with-rtsopts=-N"
    default-language: Haskell2010

executable regexle-haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:
        aeson >=2.2 && <2.3,
        base >=4.19 && <5,
        bytestring >=0.11 && <0.13,
        containers >=0.7 && <0.8,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.5,
        optparse-applicative >=0.18 && <0.19,
        process >=1.6 && <1.7,
        time >=1.14 && <1.15,
        text >=2.0 && <2.3,
        regexle-haskell

    hs-source-dirs:   app
    default-language: Haskell2010

executable replay-dump
    import:           warnings
    main-is:          ReplayDump.hs
    build-depends:
        base >=4.19 && <5,
        containers >=0.7 && <0.8,
        directory >=1.3 && <1.4,
        filepath >=1.4 && <1.5,
        optparse-applicative >=0.18 && <0.19,
        mtl >=2.3 && <2.4,
        transformers >=0.6 && <0.7,
        text >=2.0 && <2.3,
        regexle-haskell,
        z3 >=415 && <416
    hs-source-dirs:   app
    default-language: Haskell2010
